--- a/.github/workflows/lo-test.yml
+++ b/.github/workflows/lo-test.yml
@@ -7,24 +7,24 @@ on:
       device:
         description: 'select device to build'
         default: 'r2s'
-        required: false
+        required: true
       branch:
         description: 'seleclt openwrt branch'
         default: 'master'
-        required: false
+        required: true
       save:
         description: 'save img or just print config'
         default: 'false'
-        required: false
+        required: true
 
 jobs:
 
   download_packages:
-    name: Download ${{ github.event.client_payload.device || github.event.inputs.device }} packages
+    name: Download ${{ github.event.inputs.device }} packages
     runs-on: ubuntu-20.04
     env:
-      DEVICE: ${{ github.event.client_payload.device || github.event.inputs.device }}
-      BRANCH: ${{ github.event.client_payload.branch || github.event.inputs.branch }}
+      DEVICE: ${{ github.event.inputs.device }}
+      BRANCH: ${{ github.event.inputs.branch }}
     if: github.repository_owner=='Ahlaman'
 
     steps:
@@ -70,7 +70,6 @@ jobs:
 
       - name: Update feeds and packages
         run: |
-          pwd
           cd ~/lede
           if [ -d 'feeds' ]; then
             pushd feeds/packages; git restore .; popd
@@ -83,7 +82,6 @@ jobs:
           . $GITHUB_WORKSPACE/scripts/merge_packages.sh
           . $GITHUB_WORKSPACE/scripts/patches.sh
           cd
-          pwd
           svn export https://github.com/openwrt/luci/trunk luci
           pushd luci
           ls -d */ | xargs -n1 -i diff -q {} ../lede/feeds/luci/{} | grep Only | grep lede | grep -E applications\|themes | awk '{print $4}' | xargs -n1 -i echo CONFIG_PACKAGE_{}=m > ~/lede/more_luci.txt
@@ -99,18 +97,19 @@ jobs:
           make defconfig && sed -i -E 's/# (CONFIG_.*_COMPRESS_UPX) is not set/\1=y/' .config && make defconfig
           cat .config
           
-      - name: exit 1 if not save
+      - name: Exit if not save
         if: github.event.inputs.save=='false'
         run: |
           exit 1
 
       - name: Clean build cache
-        if: ${{ github.event.client_payload.package_clean == 'true' || github.event.inputs.device != '' }}
+        if: ${{ github.event.inputs.device != '' }}
         run: |
           cd ~/lede
           df -h .
           make package/clean
           df -h .
+          
       - name: Build and deploy packages
         timeout-minutes: 1440
         run: |
@@ -129,38 +128,16 @@ jobs:
           du -h --max-depth=1 ./ --exclude=build_dir --exclude=bin
           du -h --max-depth=1 ./build_dir
           du -h --max-depth=1 ./bin
+          
       - name: Clean build cache
-        if: ${{ github.event.client_payload.package_clean == 'true' }}
         run: |
           cd ~/lede
           df -h .
-          make package/clean
+          rm rf bin tmp
           df -h .
-
-      - name: Prepare artifact
-        run: |
-          cd
-          mkdir -p ./artifact/buildinfo
-          cd lede
-          cp -rf $(find ./bin/targets/ -type f -name "*.buildinfo" -o -name "*.manifest") ../artifact/buildinfo/
-          cp -rf .config ../artifact/buildinfo/
-          echo "strDate=$(TZ=UTC-8 date +%Y-%m-%d)" >> $GITHUB_ENV
-          echo "strDevice=$(echo $DEVICE | awk '{print toupper($0)}')" >> $GITHUB_ENV
-          rm -rf bin tmp
-          cd ..
-          mv artifact $GITHUB_WORKSPACE
-
-      - name: Deliver buildinfo
-        uses: actions/upload-artifact@v2
-        with:
-          name: OpenWrt_buildinfo
-          path: ./artifact/buildinfo/
 
       - name: Generate firmware
         run: |
-          sudo apt update && sudo apt install qemu-utils
-          sudo sysctl vm.swappiness=0
-          ulimit -SHn 65000
           cat ~/ib-$DEVICE.tar.xz | tar -Jxvf -
           set -x
           mv *imagebuilder* ib && cd ib
@@ -168,6 +145,8 @@ jobs:
           sed -i '/local/d;s/#//' files/etc/opkg/distfeeds.conf
           sed -i 's/luci-app-[^ ]*//g' include/target.mk $(find target/ -name Makefile)
           sed -i 's/$(OPKG) install $(BUILD_PACKAGES)/$(OPKG) install --force-overwrite $(BUILD_PACKAGES)/' Makefile
+          mkdir -p $GITHUB_WORKSPACE/release
+          cp packages/*.ipk $GITHUB_WORKSPACE/release/
           ls packages/*.ipk | xargs -n1 basename > package.files
           PACKAGES=$(cat $GITHUB_WORKSPACE/$DEVICE.config.seed $GITHUB_WORKSPACE/common.seed | grep CONFIG_PACKAGE | grep -v CONFIG_PACKAGE_luci-app | sed 's/CONFIG_PACKAGE_//;s/=y//' | xargs -n1 -i grep -o {} package.files | sort -u | xargs echo)
           PACKAGES="$PACKAGES `grep -o luci-i18n-opkg-zh-cn package.files || true`"
@@ -175,14 +154,13 @@ jobs:
           LP=$(echo $LUCI | sed 's/-app-/-i18n-/g;s/ /\n/g' | xargs -n1 -i grep -o {}-zh-cn package.files | xargs echo)
           make image PACKAGES="$PACKAGES $LUCI $LP luci-i18n-base-zh-cn luci-i18n-firewall-zh-cn" FILES="files"
 
-          mkdir -p $GITHUB_WORKSPACE/release
           mv $(ls -1 ./bin/targets/*/*/*img.gz | head -1) $GITHUB_WORKSPACE/release/$DEVICE.img.gz
           cd $GITHUB_WORKSPACE/release/ && md5sum $DEVICE.img.gz > $DEVICE.img.gz.md5
           gzip -dc $DEVICE.img.gz | md5sum | sed "s/-/$DEVICE.img/" > $DEVICE.img.md5
           echo "strDate=$(TZ=UTC-8 date +%Y-%m-%d)" >> $GITHUB_ENV
           echo "strDevice=$(echo $DEVICE | awk '{print toupper($0)}')" >> $GITHUB_ENV
 
-          if [[ ${{ github.event.client_payload.device || github.event.inputs.device }} == *"r1s"* ]]; then
+          if [[ ${{ github.event.inputs.device }} == *"r1s"* ]]; then
             exit 0
           fi
           cd $GITHUB_WORKSPACE/ib
