Build: add R5S profile for test https://wiki.friendlyelec.com/wiki/index.php/NanoPi_R5S/zh

--- a/.github/workflows/lo-test.yml
+++ b/.github/workflows/lo-test.yml
@@ -99,7 +99,7 @@ jobs:
         run: |
           cd ~/lede
           df -h .
-          make package/clean
+          make clean
           df -h .
       - name: Build and deploy packages
         timeout-minutes: 1440
