--- a/.github/workflows/r5s.yml
+++ b/.github/workflows/r5s.yml
@@ -140,7 +140,7 @@ jobs:
           for i in {1..20}; do curl -sL --fail https://github.com/klever1988/sshactions/releases/download/cache/lede.$DEVICE.img.zst.0$i || break; done | zstdmt -d -o /dev/null
           if [ $? -eq 0 ]; then break; fi
           done
-
+          rm *.img.zst
           sudo mount -o loop ~/lede.img friendlywrt-rk3568
 
       - name: prepare relase
