--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -235,14 +235,16 @@ jobs:
           export AUTH="Authorization: token ${{ secrets.SEC_TOKEN }}"
           export cache_path='github.com/repos/${{github.repository_owner}}/sshactions/releases'
           export cache_repo_id='latest'
-          if [ -e ib-$DEVICE.tar.xz ]; then
+          if [ -e ~/ib-$DEVICE.tar.xz ]; then
+            echo '上传imagebuilder'
+            echo `ls ~/ib-$DEVICE.tar.xz`
             for i in {1..3}; do
             ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
             echo $ret | jq -r '.assets[] | select(.name == "ib-'$DEVICE'.tar.xz").id' | \
             xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
             #上传
-            ls ib-$DEVICE.tar.xz | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
-            rm -rf ib-$DEVICE.tar.xz
+            ls ~/ib-$DEVICE.tar.xz | parallel --wc 'while true; do curl -T {} -H "$AUTH" -H "Content-Type: application/octet-stream" "https://uploads.$cache_path/$cache_repo_id/assets?name={}" && break || true; done'
+            rm -rf `ls ~/ib-$DEVICE.tar.xz`
           fi
 
       - name: Clean space for upload cache
@@ -284,6 +286,7 @@ jobs:
           sync
 
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
+          echo '上传编译cache: lede.img'
           for i in {1..3}; do
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
