--- a/.github/workflows/rebuild.yml
+++ b/.github/workflows/rebuild.yml
@@ -151,7 +151,7 @@ jobs:
           zstdmt -c --long lede.img | split --numeric=1 -b 2000m - lede.$DEVICE.img.zst.
           ls
           echo '上传编译cache: lede.img'
-          while true; do
+          for i in {1..3}; do
           ret=$(curl -sH "$AUTH" "https://api.$cache_path/tags/cache")
           echo $ret | jq -r '.assets[] | select(.name | contains ("'$DEVICE'.img")).id' | \
           xargs -n1 -i curl -X DELETE -H "$AUTH" "https://api.$cache_path/assets/{}"
